cmake_minimum_required(VERSION 3.8)
project(miniprojekt_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_python REQUIRED)
find_package(rclpy REQUIRED)
find_package(std_msgs REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)


# Include cpp "include" dir
include_directories(include)

# Install Python moduels
ament_python_install_package(${PROJECT_NAME}) 

# Install Python executables
install(PROGRAMS
  scripts/import_csv_node.py
  scripts/tcp_server_node.py
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
